# amazon-invoices-

./: .env.example  README.md  pyproject.toml
src/amazon_invoices/: __init__.py  config.py  logging_utils.py  runner.py  selectors.py  utils.py
tests/: test_runner_utils.py  test_selectors.py
